--- a/layout/_widget/dream.ejs
+++ b/layout/_widget/dream.ejs
@@ -6,7 +6,10 @@
     <% } %>
     <div class="row">
         <div class="col l8 offset-l2 m10 offset-m1 s10 offset-s1 center-align text">
-            <%= theme.dream.text %>
+<!--                        <%= theme.dream.text %>-->
+            我们意图可以使用逻辑程式来解释分析人生。<br>
+            我们愿意陷入虚幻而得以理智观摩玲珑世间。<br>
+            我们希望能让感性的人与理性的机器相结合。<br>
         </div>
     </div>
 </div>
