--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -38,3 +38,10 @@
     });
 </script>
 <% } %>
+
+<!-- 2021 12 16  moelyrics -->
+<% if (page.moelyrics) { %>
+<!--     <script src="http://192.168.1.5:8080/dist/moelyrics.min.js"></script>-->
+<!--     <script src="http://192.168.1.5:63342/Moegirl-Lyric-Template-Parser/dist/moelyrics.min.js"></script>-->
+    <script src="https://sucicada.github.io/Moegirl-Lyric-Template-Parser/dist/moelyrics.min.js"></script>
+<% } %>
