--- a/layout/_partial/background.ejs
+++ b/layout/_partial/background.ejs
@@ -2,7 +2,8 @@
     body{
        background-image: url(<%- theme.background.url %>);
        background-repeat:no-repeat;
-       background-size: 100% 100%;
+       /* 2021 SuCicada */
+       background-size:cover;
        background-attachment:fixed;
     }
 </style>
