--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -83,7 +83,7 @@
     <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.lightgallery) %>">
     <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.matery) %>">
     <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.mycss) %>">
-
+    <link rel="stylesheet" type="text/css" href="/css/dark.css">
     <script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.jquery) %>"></script>
     <link rel="manifest" href="/manifest.json">
 
