--- a/layout/_partial/background.ejs
+++ b/layout/_partial/background.ejs
@@ -3,8 +3,9 @@
         body{
             background-image: url(<%- theme.background.url %>);
             background-repeat:no-repeat;
-            background-size: 100% 100%;
+            background-size: cover;
             background-attachment:fixed;
+            background-position: 25%;
         }
     </style>
 <% } %>
