--- a/layout/_partial/main-style.ejs
+++ b/layout/_partial/main-style.ejs
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.lightgallery) %>">
 <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.matery) %>">
 <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.mycss) %>">
+<link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.dark) %>" media="none" onload="if(media!='all')media='all'">
 
 <%- partial('_partial/post-style') %>
 <%- partial('_partial/reward-style') %>
