--- a/layout/_partial/background.ejs
+++ b/layout/_partial/background.ejs
@@ -6,5 +6,12 @@
             background-size: 100% 100%;
             background-attachment:fixed;
         }
+        
+        @media only screen and (max-width: 1024px) {
+            /* 分辨率小于1024时不显示背景图 */
+            body {
+                background-image: none; 
+            }
+        }
     </style>
 <% } %>
