[fix] 修复档文章日历月份文字重合 prismjs显示行数时选中重合

--- a/layout/_widget/post-calendar.ejs
+++ b/layout/_widget/post-calendar.ejs
@@ -89,7 +89,8 @@
             },
             monthLabel: {
                 nameMap: '<%- nameMap %>',
-                fontSize: 11
+                fontSize: 11,
+                align: 'left'
             },
             dayLabel: {
                 formatter: '{start}  1st',
