--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -122,7 +122,7 @@ pre {
 
 code {
     padding: 1px 5px;
-    top: 13px !important;
+    /* top: 13px !important; */
     font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
     font-size: 0.91rem;
     color: #e96900;
