--- a/layout/_widget/post-calendar.ejs
+++ b/layout/_widget/post-calendar.ejs
@@ -90,7 +90,8 @@
             monthLabel: {
                 nameMap: '<%- nameMap %>',
                 fontSize: 11,
-                align: 'left'
+                align: 'left',
+                margin: 0
             },
             dayLabel: {
                 formatter: '{start}  1st',
